# nano-qec

./: .gitignore  AGENTS.md  README.md  SKILL.md  eval.py  prepare.py  program.md  pyproject.toml  train.py
.github/workflows/: ci.yml
archived/: README.md
docs/: hermes-ops.md  implementation-v0.md  nanoqec-plan.md
docs/human/: architecture.md  concepts.md  contributing.md  faq.md  glossary.md  index.md  overview.md  quickstart.md  results.md  review-checklist.md  using-hermes.md
docs/plans/: 2026-03-24-prime-intellect-cloud-run.md
paper/how-low-can-you-go/: blog_post.md  extra_pkgs.tex  main.tex  main_name_only.tex  references.bib
scripts/: __init__.py  bootstrap_cloud.py  check_improvement.py  fetch_cloud_artifacts.py  plot_progress.py  run_cloud_profile.py  tune_profile.py
src/nanoqec/: __init__.py  contracts.py  datasets.py  eval_cli.py  git.py  layout.py  models.py  optimizers.py  prepare_cli.py  profiles.py  train_cli.py
tests/: test_pipeline.py  test_prepare.py  test_scripts.py
