[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoqec"
version = "0.1.0"
description = "Harness-first local pipeline for NanoQEC experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Zetetic Works Research Corporation"},
]
dependencies = [
  "numpy>=1.26,<3",
  "pymatching>=2.2,<3",
  "stim>=1.14,<2",
  "torch>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
]
